# zvec

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_test_wheel.yml  build_wheel.yml  continuous_bench.yml  linux_arm64_docker_ci.yml  linux_x64_docker_ci.yml  main.yml  nightly_coverage.yml
.github/workflows/scripts/: run_vdb.sh
cmake/: option.cmake
python/tests/: test_embedding.py  test_reranker.py  test_util.py
python/zvec/: __init__.py  __init__.pyi
python/zvec/common/: constants.py
python/zvec/extension/: __init__.py  bm25_embedding_function.py  embedding_function.py  jina_embedding_function.py  jina_function.py  multi_vector_reranker.py  openai_embedding_function.py  openai_function.py  qwen_embedding_function.py  qwen_function.py  qwen_rerank_function.py  rerank_function.py  sentence_transformer_embedding_function.py  sentence_transformer_function.py  sentence_transformer_rerank_function.py
python/zvec/model/: collection.py
python/zvec/tool/: util.py
src/binding/python/model/: python_collection.cc
src/core/algorithm/flat/: flat_streamer.cc  flat_streamer_context.h
src/core/mixed_reducer/: mixed_streamer_reducer.cc
src/core/quantizer/: cosine_converter.cc
src/core/utility/: memory_read_storage.cc
src/db/: collection.cc
src/db/index/column/vector_column/: combined_vector_column_indexer.cc  combined_vector_column_indexer.h
src/db/index/segment/: segment.cc  segment.h  segment_manager.cc  segment_manager.h
src/db/sqlengine/planner/: query_planner.cc
src/include/zvec/db/: collection.h
tests/ailego/parallel/: thread_queue_test.cc
tests/core/algorithm/flat/: flat_streamer_test.cc
tests/core/algorithm/ivf/: ivf_searcher_test.cc
tests/core/metric/: quantized_integer_metric_test.cc
tests/db/: collection_test.cc
tests/db/index/segment/: segment_test.cc
tests/db/sqlengine/: mock_segment.h
